fixed quote and image scaling on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -62,9 +62,10 @@ h1 {
 .first-content {
     margin-top: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: flex-start;
     gap: 16px;
+    flex-wrap: wrap;
 }
 
 .header-button {
@@ -82,6 +83,7 @@ h1 {
     background-color: rgb(128,128,128);
     max-width: 100%;
     max-height: 360px;
+    align-self: auto;
 }
 
 button {
@@ -134,22 +136,21 @@ p {
     height: 100%;
     display: flex;
     flex-direction: column;
-    background-color:lightgray;
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 50px;
+    padding-right: 50px;
     justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
+    background-color:lightgray;
 }
 
 .quote p{
     font-size: 26px;
     font-weight: 100;
-    flex-shrink: 1;
+    align-self: center;
 }
 
 .quote {
     align-self: center;
-    justify-self: center;
 }
 
 .quotee {
